serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-proje
  namespace: default
spec:
  serviceAccountName: sa-project
  containers:
    - name: projecontainer
      image: ozgurozturknet/k8s:latest
      ports:
        - containerPort: 80
