statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongostatefulset
spec:
  serviceName: mongo-svc
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        environment: test
        replicaset: MainRepSet
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        tier: prod
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "prod"
          effect: "NoSchedule"
      containers:
        - name: mongo-container
          image: mongo
          command:
            - "mongod"
            - "--bind_ip"
            - "0.0.0.0"
            - "--replSet"
            - "MainRepSet"
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pv-claim
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-pv-claim
        annotations:
          volume.beta.kubernetes.io/storage-class: "default"
      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 2Gi
