wpprod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: prod
  labels:
    tier: prod
    app: mysql
spec:
  selector:
    matchLabels:
      tier: prod
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: prod
        app: mysql
    spec:
      containers:
        - name: mysql-prod
          image: mysql:5.6
          resources:
            limits:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - containerPort: 3306
              name: mysql-prod-port
          volumeMounts:
            - name: mysql-prod-pv
              mountPath: /var/lib/mysql
      nodeSelector:
        tier: prod
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "prod"
          effect: "NoSchedule"
      volumes:
        - name: mysql-prod-pv
          persistentVolumeClaim:
            claimName: mysql-prod-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  namespace: prod
  labels:
    tier: prod
    app: wordpress
spec:
  selector:
    matchLabels:
      tier: prod
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: prod
        app: wordpress
    spec:
      containers:
        - image: wordpress:5.6
          name: wp-prod
          resources:
            limits:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - containerPort: 80
              name: wp-prod-port
          volumeMounts:
            - name: wp-prod-pv
              mountPath: /var/www/html
      nodeSelector:
        tier: prod
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "prod"
          effect: "NoSchedule"
      volumes:
        - name: wp-prod-pv
          persistentVolumeClaim:
            claimName: wp-prod-claim
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mysql
              topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-prod-svc
  namespace: prod
  labels:
    tier: prod
spec:
  selector:
    tier: prod
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wp-prod-svc
  namespace: prod
  labels:
    tier: prod
    app: wordpress
spec:
  selector:
    tier: prod
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
