wptest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: test
  labels:
    tier: test
    app: mysql
spec:
  selector:
    matchLabels:
      tier: test
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: test
        app: mysql
    spec:
      containers:
        - name: mysql-test
          image: mysql:5.6
          resources:
            limits:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - containerPort: 3306
              name: mysql-test-port
          volumeMounts:
            - name: mysql-test-pv
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-test-pv
          persistentVolumeClaim:
            claimName: mysql-test-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  namespace: test
  labels:
    tier: test
    app: wordpress
spec:
  selector:
    matchLabels:
      tier: test
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: test
        app: wordpress
    spec:
      containers:
        - image: wordpress:5.6
          name: wp-test
          resources:
            limits:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - containerPort: 80
              name: wp-test-port
          volumeMounts:
            - name: wp-test-pv
              mountPath: /var/www/html
      volumes:
        - name: wp-test-pv
          persistentVolumeClaim:
            claimName: wp-test-claim
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mysql
              topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-test-svc
  namespace: test
  labels:
    tier: test
spec:
  selector:
    tier: test
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wp-test-svc
  namespace: test
  labels:
    tier: test
    app: wordpress
spec:
  selector:
    tier: test
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
