wpingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-test-ingress
  labels:
    tier: test
    app: wordpress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: testblog.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wp-test-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-prod-ingress
  labels:
    tier: prod
    app: wordpress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: companyblog.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wp-prod-svc
                port:
                  number: 80
